[package]
name = "thinp-garbage-collected"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3"  
crc32c = "0.6"
fixedbitset = "0.4"
linked-hash-map = "0.5"
rand = "0.8"
rand_chacha = "0.3"  
roaring = "0.10"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }
